Add filter option in friends list, working on personalInfo